--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   border:2px solid white;
   display: inline-block;
   width: 32%;
-  height: 32%;
+  min-height: 100px;
   color: white;
   font-size: 5em;
 }
