--- a/style.css
+++ b/style.css
@@ -6,19 +6,47 @@
 body {
   background-color: grey;
 
+.myBtn {
+  background: #3498db;
+  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
+  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
+  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
+  background-image: -o-linear-gradient(top, #3498db, #2980b9);
+  background-image: linear-gradient(to bottom, #3498db, #2980b9);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 28px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
 
+.myBtn:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
+}
 
 }
 
 #gameBoard {
-  width: 400px;
-  height: 400px;
+  width: 398px;
+  height: 391px;
   margin: 0 auto;
   background-color: none;
-  border-left-width: 10px;
-  border-left-color: red;
-  background-color: grey;
+  /*border-left-width: 10px;*/
+  /*border-left-color: red;*/
+  border-left: 50px solid white;
+  border-right: 50px solid black;
+  background-color: mistyrose;
   border-radius: 10px;
+  transition: 4s;
 
 }
 
@@ -34,7 +62,7 @@ body {
   width: 130px;
   height: 130px;
   margin: 0 auto;
-  line-height: -140px;
+  /*line-height: -140px;*/
   font-size: 0;
   vertical-align: middle;
 }
