--- a/style.css
+++ b/style.css
@@ -5,35 +5,8 @@
 
 body {
   background-color: grey;
-
-.myBtn {
-  background: #3498db;
-  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
-  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
-  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
-  background-image: -o-linear-gradient(top, #3498db, #2980b9);
-  background-image: linear-gradient(to bottom, #3498db, #2980b9);
-  -webkit-border-radius: 28;
-  -moz-border-radius: 28;
-  border-radius: 28px;
-  font-family: Arial;
-  color: #ffffff;
-  font-size: 20px;
-  padding: 10px 20px 10px 20px;
-  text-decoration: none;
 }
 
-.myBtn:hover {
-  background: #3cb0fd;
-  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
-  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
-  text-decoration: none;
-}
-
-}
 
 #gameBoard {
   width: 398px;
@@ -73,3 +46,21 @@ body {
   background-color: red
   position: relative;
 }
+
+@media (max-width: 500px) {
+    body {
+        background-color: lightblue;
+    }
+
+    #gameBoard {
+      width: 198px;
+      height: 191px;
+    }
+
+    #gameBoard div {
+       width: 61px;
+       height: 61px;
+    }
+}
+
+
