--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@
 }*/
 
 body {
-  background-color: grey;
+  background-color: #40C4FF;
+  transition: 2s;
+  font-family: Lato;
 }
 
 
@@ -15,9 +17,11 @@ body {
   background-color: none;
   /*border-left-width: 10px;*/
   /*border-left-color: red;*/
+  border-top: 50px solid white;
   border-left: 50px solid white;
   border-right: 50px solid black;
-  background-color: mistyrose;
+  border-bottom: 50px solid #BDBDBD;
+  background-color: #BDBDBD;
   border-radius: 10px;
   transition: 4s;
 
@@ -25,20 +29,20 @@ body {
 
 
 #gameBoard div {
-  background-color: grey;
+  background-color: #BDBDBD;
   box-sizing: border-box;
   border-radius: 200px;
   text-align: center;
-  border:2px solid #d3d3d3;
+  border:6px solid #d3d3d3;
   display: inline-block;
   position: relative;
   width: 130px;
   height: 130px;
   margin: 0 auto;
   /*line-height: -140px;*/
-  font-size: 0;
+  font-size: 0em;
   vertical-align: middle;
-  transition: 1s;
+  transition: 4s;
 }
 
 #gameBoard div p {
@@ -49,18 +53,57 @@ body {
 
 @media (max-width: 500px) {
     body {
-        background-color: lightblue;
+        background-color: #40C4FF;
     }
 
     #gameBoard {
       width: 198px;
       height: 191px;
+      transition: 1s;
     }
 
     #gameBoard div {
        width: 61px;
        height: 61px;
+       transition: 1s;
     }
 }
 
 
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
