--- a/style.css
+++ b/style.css
@@ -10,13 +10,31 @@ body {
 }
 .turnShower {
   display: inline-block;
-  color: red;
+  color: black;
 }
 
 #turndeclarer {
   display: block;
   text-align: center;
+  font-size: 3em;
+  /*border-bottom: 100px solid none;*/
+  padding-bottom: 50px;
 
+}
+input {
+  height: 30px
+}
+
+button {
+    background-color: #E0E0E0; /* Green */
+    border: none;
+    color: white;
+    /*height: 50px;*/
+    padding: 10px 25px;
+    text-align: center;
+    color: black;
+    font-size: 1em;
+    border-radius: 10px;
 }
 
 #gameBoard {
@@ -36,6 +54,16 @@ body {
 
 }
 
+#colortypes{
+
+  display: block;
+  text-align: center;
+  color: red;
+  /*border-bottom: 100px solid none;*/
+  padding-bottom: 10px;
+
+}
+
 
 #gameBoard div {
   background-color: #BDBDBD;
@@ -49,14 +77,14 @@ body {
   height: 130px;
   margin: 0 auto;
   /*line-height: -140px;*/
-  font-size: 0em;
+  font-size: 0;
   vertical-align: middle;
   transition: 4s;
 }
 
 #gameBoard div p {
   top: 50px;
-  background-color: red
+  background-color: black; 
   position: relative;
 }
 
@@ -85,6 +113,8 @@ body {
     position: fixed; /* Stay in place */
     z-index: 1; /* Sit on top */
     left: 0;
+    transition: 1s;
+    /*border-radius: 50px;*/
     top: 0;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
@@ -96,6 +126,8 @@ body {
 /* Modal Content/Box */
 .modal-content {
     background-color: #BDBDBD;
+    transition: 1s;
+    border-radius: 50px;
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
     border: 19px solid red;
